--- a/upTask/backend/.env
+++ b/upTask/backend/.env
@@ -1,3 +1,5 @@
 PORT =3000
 STRING_CONNECTION=mongodb://127.0.0.1:27017/UpTASK
 JWT_SECRET=secret_key
+STRING_CONNECTION_CORS1=http://127.0.0.1:5173
+STRING_CONNECTION_CORS2=http://localhost:5173
