usuarios frontend y backend done! next context

--- a/upTask/backend/.env
+++ b/upTask/backend/.env
@@ -3,3 +3,7 @@ STRING_CONNECTION=mongodb://127.0.0.1:27017/UpTASK
 JWT_SECRET=secret_key
 STRING_CONNECTION_CORS1=http://127.0.0.1:5173
 STRING_CONNECTION_CORS2=http://localhost:5173
+HOST_EMAIL=sandbox.smtp.mailtrap.io
+USER_EMAIL=5335c79d99aabc
+PASS_EMAIL=bb91d0791deea4
+PORT_EMAIL=2525
